@@ -1,4 +1,6 @@
 Next:
+  - Add "empty drive" CD-RIM image type "IMGMOUNT e: -t iso -empty" as a way
+    to emulate an empty CD-ROM drive with no disc in the drive. (joncampbell123).
   - Add "empty drive" floppy image type "IMGMOUNT 0 -t floppy -fs none -empty"
     as a way to emulate a floppy drive with no disk in the drive. (joncampbell123).
   - Video debug overlay: Fix mouse integration misalignment when the video
